updated service-example: namespace, service yaml, readMe

--- a/k8s-deployment/service-example/pod2.yaml
+++ b/k8s-deployment/service-example/pod2.yaml
@@ -1,10 +1,10 @@
 apiVersion: v1
 kind: Pod
 metadata:
-  name: FirstPod
+  name: second-pod
   labels:
     app: MyApp
 spec:
   containers:
-    name: SampleContainer1
-    image: coolgourav147/nginx-custom:v2
+    - name: sample-container-2
+      image: coolgourav147/nginx-custom:v2
