--- a/k8s-deployment/service-example/pod1.yaml
+++ b/k8s-deployment/service-example/pod1.yaml
@@ -1,10 +1,11 @@
+---
 apiVersion: v1
 kind: Pod
 metadata:
-  name: FirstPod
+  name: first-pod
   labels:
     app: MyApp
 spec:
   containers:
-    name: SampleContainer1
-    image: coolgourav147/nginx-custom
+    - name: sample-container-1
+      image: coolgourav147/nginx-custom
