--- a/helm/nginx/values.yaml
+++ b/helm/nginx/values.yaml
@@ -1,7 +1,6 @@
 name: nginx
 replicaCount: 1
 
-
 container:
   name: nginx 
   image: nginx
@@ -9,7 +8,7 @@ container:
 
 service:
   name: nginx-svc
-  type: ClusterIP
-  port: 6000
-  protocol: TCP
-  targetPort: 31000
+  type: NodePort
+  port: 80
+  targetPort: 80
+  nodePort: 31000
