--- a/helm/test-udemy/values-dev.yaml
+++ b/helm/test-udemy/values-dev.yaml
@@ -1,4 +1,4 @@
 name: mychart-configmap
 env: development-environment
-firstvalue: 98756
-secondvalue: 94335
+firstvalue: "my first value"
+secondvalue: 678my second value
