--- a/helm/test-udemy/values-dev.yaml
+++ b/helm/test-udemy/values-dev.yaml
@@ -2,3 +2,10 @@ name: mychart-configmap
 env: development-environment
 firstvalue: "my first value"
 secondvalue: 678my second value
+
+ServiceEntry:
+  name: test-se
+  hosts:
+    - test.first.com
+    - test.second.com
+    - test.third.com
