--- a/k8s-deployment/single-container-application/deployment.yaml
+++ b/k8s-deployment/single-container-application/deployment.yaml
@@ -4,7 +4,7 @@ metadata:
   name: static-sample-deployment
   namespace: sample
 spec:
-  replicas: 3
+  replicas: 1
   template:
     metadata:
       labels:
@@ -15,6 +15,7 @@ spec:
         image: nginx
         ports:
         - containerPort: 80
+        imagePullPolicy: Always
   selector: 
     matchLabels:
       app: sample-app
