--- a/k8s-deployment/taskmaster-py-flask/application/Dockerfile
+++ b/k8s-deployment/taskmaster-py-flask/application/Dockerfile
@@ -1,6 +1,7 @@
 FROM python:alpine3.7
 COPY . /app
 WORKDIR /app
+RUN pip install --upgrade pip
 RUN pip install -r requirements.txt
 ENV PORT 5000
 EXPOSE 5000
