--- a/k8s-deployment/single-container-application/service.yaml
+++ b/k8s-deployment/single-container-application/service.yaml
@@ -6,7 +6,8 @@ metadata:
 spec:
   type: NodePort
   ports:
-    - port: 80
+    - port: 8081
+      targetPort: 80
       nodePort: 31000
   selector:
     app: sample-app
