--- a/k8s-deployment/configmaps/configmap.yaml
+++ b/k8s-deployment/configmaps/configmap.yaml
@@ -1,9 +1,9 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: dbConfig
+  name: dbconfig
   labels:
     app: myapplication
 data:
-    db-port: "3307"
+    db-port: "3309"
     db-name: "cloudsql"
