--- a/k8s-deployment/single-container-application/Jenkinsfile
+++ b/k8s-deployment/single-container-application/Jenkinsfile
@@ -1,5 +1,8 @@
 pipeline {
     agent any
+    parameters {
+        string defaultValue: 'skill', description: 'namespace name variable', name: 'namespace'
+    }
     stages {
         stage ("git clone"){
             steps{
@@ -11,12 +14,13 @@ pipeline {
         stage ("deploy to kubernetes") {
             steps {
                 // dir will route to the right folder in the cloned repository
+                echo 'cluster: minikube namespace: ${namespace}'
                 dir('k8s-deployment/single-container-application') {
                     script {
                         kubernetesDeploy (configs: 'namespace.yaml, deployment.yaml, service.yaml',  kubeconfigId: 'kubernetes_config')
                     }
                 }
-                 echo 'successfully deployed to minikube cluster'
+                 echo 'successfully deployed to minikube cluster in '
             }
         }
     }
