cluter namespace parameter

--- a/k8s-deployment/single-container-application/Jenkinsfile
+++ b/k8s-deployment/single-container-application/Jenkinsfile
@@ -1,7 +1,8 @@
 pipeline {
     agent any
     parameters {
-        string (defaultValue: 'skill', description: 'namespace name variable', name: 'namespace)
+        string (name: 'namespace', defaultValue: 'skill', description: 'namespace name variable')
+        string (name: 'cluster', defaultValue: 'minikube', description: 'cluster name variable')
     }
     stages {
         stage ("git clone"){
@@ -14,13 +15,12 @@ pipeline {
         stage ("deploy to kubernetes") {
             steps {
                 // dir will route to the right folder in the cloned repository
-                echo 'cluster: minikube namespace: "$namespace"'
+                echo "cluster: ${cluster} namespace: ${namespace}"
                 dir('k8s-deployment/single-container-application') {
                     script {
                         kubernetesDeploy (configs: 'namespace.yaml, deployment.yaml, service.yaml',  kubeconfigId: 'kubernetes_config')
                     }
                 }
-                 echo 'successfully deployed to minikube cluster in '
             }
         }
     }
