--- a/docker/htmlFile/Jenkinsfile
+++ b/docker/htmlFile/Jenkinsfile
@@ -3,7 +3,7 @@ pipeline {
     stages {
         stage ("git clone"){
             steps{
-                git url: "https://github.com/kishalayb18/DevOps.git", branch: "feature/kubernetes"
+                git url: "https://github.com/kishalayb18/DevOps.git", branch: "feature/kubernetesgit add"
                 echo 'code cloning completed'
             }
         }
@@ -11,7 +11,7 @@ pipeline {
         stage ("build") {
             
             steps{
-                dir('docker/htmlFile') {
+                dir('docker/htmlFile/dockerfiles') {
                     script {
                         sh "docker build -t page_kishalay ."
                         echo 'docker build successful'
@@ -20,6 +20,7 @@ pipeline {
             }
 
         }
+
         stage ("push") {
             steps{
                 withCredentials([usernamePassword(credentialsId:"docker-cred",passwordVariable:"dockerhubkishalayPass",usernameVariable:"dockerhubkishalayUser")]){
@@ -35,7 +36,7 @@ pipeline {
             steps {
                 // dir will route to the right folder in the cloned repository
                 echo "cluster: ${cluster} namespace: ${namespace}"
-                dir('k8s-deployment/single-container-application') {
+                dir('docker/htmlFile/deploymentfiles') {
                     script {
                         kubernetesDeploy (configs: 'deployment.yaml, service.yaml',  kubeconfigId: 'kubernetes_config')
                     }
