--- a/docker/htmlFile/deploymentfiles/service.yaml
+++ b/docker/htmlFile/deploymentfiles/service.yaml
@@ -1,12 +1,12 @@
 apiVersion: v1
 kind: Service
 metadata: 
-  name: sample-static-service
+  name: page-kishalay-service
 spec:
   type: NodePort
+  selector:
+    app: page_kishalay
   ports:
     - port: 8081
       targetPort: 80
       nodePort: 31036
-  selector:
-    app: sample-app
