--- a/docker/htmlFile/deploymentfiles/service.yaml
+++ b/docker/htmlFile/deploymentfiles/service.yaml
@@ -5,7 +5,7 @@ metadata:
 spec:
   type: NodePort
   selector:
-    app: page_kishalay
+    app: page-kishalay
   ports:
     - port: 8081
       targetPort: 80
