modified file name

--- a/docker/htmlFile/dockerfiles/Dockerfile
+++ b/docker/htmlFile/dockerfiles/Dockerfile
@@ -2,7 +2,7 @@
 FROM nginx:latest
 
 # Copy the HTML file into the Nginx default web root directory
-COPY kishalay.html /usr/share/nginx/html/
+COPY index.html /usr/share/nginx/html/
 
 # Expose port 80 for incoming traffic
 EXPOSE 80
