--- a/docker/htmlFile/dockerfiles/Dockerfile
+++ b/docker/htmlFile/dockerfiles/Dockerfile
@@ -1,6 +1,12 @@
 # Use the official Nginx image as the base image
 FROM nginx:latest
 
+# Remove the default Nginx configuration
+RUN rm /etc/nginx/conf.d/default.conf
+
+# Copy your custom Nginx configuration
+COPY nginx.conf /etc/nginx/conf.d/
+
 # Copy the HTML file into the Nginx default web root directory
 COPY index.html /usr/share/nginx/html/
 
