modified mysql helm dependencies file

--- a/helm/coupnservice/deployment-config/coupnservice/templates/deployment.yaml
+++ b/helm/coupnservice/deployment-config/coupnservice/templates/deployment.yaml
@@ -1,7 +1,7 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: {{ include "coupnservice.fullname" . }}
+  name: {{ include "coupnservice.name" . }}
   labels:
     {{- include "coupnservice.labels" . | nindent 4 }}
 spec:
