--- a/helm/coupnservice/deployment-config/coupnservice/Chart.yaml
+++ b/helm/coupnservice/deployment-config/coupnservice/Chart.yaml
@@ -25,5 +25,6 @@ appVersion: "1.16.0"
 
 dependencies:
   - name: mysql
-    version: 8.3.0
+    condition: mysql.enabled
+    version: 9.1.4
     repository: "@bitnami"
