--- a/helm/coupnservice/deployment-config/coupnservice/templates/service.yaml
+++ b/helm/coupnservice/deployment-config/coupnservice/templates/service.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ include "coupnservice.fullname" . }}
+  name: {{ include "coupnservice.name" . }}
   labels:
     {{- include "coupnservice.labels" . | nindent 4 }}
 spec:
