deployment files helm

--- a/helm/common/deployment-config/templates/_service.yaml
+++ b/helm/common/deployment-config/templates/_service.yaml
@@ -31,6 +31,6 @@ spec:
     - port: 8080
       protocol: TCP
       targetPort: 8080
-      name: port8080
+      name: tcp
       {{- end -}}
 {{- end -}}
