--- a/k8s-deployment/persistentVolume/persistentvolume.yaml
+++ b/k8s-deployment/persistentVolume/persistentvolume.yaml
@@ -1,14 +1,19 @@
 apiVersion: v1
 kind: PersistentVolume
 metadata:
-  name: task-pv-volume
-  labels:
-    type: local
+  name: mongo-pv
 spec:
-  storageClassName: manual
   capacity:
-    storage: 300Mi
+    storage: 5Gi
   accessModes:
-    - ReadWriteOnce
-  hostPath:
-    path: "/mnt/data"
+    - ReadWriteMany
+  local:
+    path: /storage/data
+  nodeAffinity:
+    required:
+      nodeSelectorTerms:
+        - matchExpressions:
+            - key: kubernetes.io/hostname
+              operator: In
+              values:
+                - minikube
