--- a/k8s-deployment/persistentVolume/pvclaim.yaml
+++ b/k8s-deployment/persistentVolume/pvclaim.yaml
@@ -1,11 +1,11 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: task-pv-claim
+  name: mongo-pvc-sc
 spec:
-  storageClassName: manual
   accessModes:
-    - ReadWriteOnce
+    - ReadWriteMany
   resources:
     requests:
-      storage: 150Mi
+      storage: 5Gi
+  storageClassName: "demo-storage"
