--- a/k8s-deployment/persistentVolume/firstdeployment.yaml
+++ b/k8s-deployment/persistentVolume/firstdeployment.yaml
@@ -1,7 +1,7 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: mongo
+  name: mongofirst
 spec:
   replicas: 1
   selector:
@@ -13,18 +13,11 @@ spec:
         app: mongo
     spec:
       containers:
-        - image: mongo
-          name: mongo
+        - image: mongo:4.4
+          name: mongofirst
           args: ["--dbpath", "/data/db"]
           env:
             - name: MONGO_INITDB_ROOT_USERNAME
               value: "admin"
             - name: MONGO_INITDB_ROOT_PASSWORD
               value: "password"
-          volumeMounts:
-            - mountPath: /data/db
-              name: mongo-volume
-      volumes:
-        - name: mongo-volume
-          persistentVolumeClaim:
-            claimName: mongo-pvc
