--- a/k8s-deployment/persistentVolume/thirddeployment.yaml
+++ b/k8s-deployment/persistentVolume/thirddeployment.yaml
@@ -1,7 +1,7 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: mongo
+  name: mongothird
 spec:
   replicas: 1
   selector:
@@ -13,8 +13,8 @@ spec:
         app: mongo
     spec:
       containers:
-        - image: mongo
-          name: mongo
+        - image: mongo:4.4
+          name: mongothird
           args: ["--dbpath", "/data/db"]
           env:
             - name: MONGO_INITDB_ROOT_USERNAME
@@ -22,9 +22,9 @@ spec:
             - name: MONGO_INITDB_ROOT_PASSWORD
               value: "password"
           volumeMounts:
-            - mountPath: /data/db
-              name: mongo-volume
+            - name:  mongothird-volume
+              mountPath:  /data/db
       volumes:
-        - name: mongo-volume
-          persistentVolumeClaim:
-            claimName: mongo-pvc
+        - name: mongothird-volume
+          hostPath:
+            path: /data
