modified static dynamic pv files

--- a/k8s-deployment/persistentVolume/deployment.yaml
+++ b/k8s-deployment/persistentVolume/deployment.yaml
@@ -13,7 +13,7 @@ spec:
         app: mongo
     spec:
       containers:
-        - image: mongo
+        - image: mongo:4.4
           name: mongo
           args: ["--dbpath", "/data/db"]
           env:
