--- a/k8s-deployment/bookinfo/ingress.yaml
+++ b/k8s-deployment/bookinfo/ingress.yaml
@@ -2,9 +2,8 @@ apiVersion: v1
 kind: Service
 metadata:
   name: istio-ingressgateway
-  namespace: istio-ingress
 spec:
-  type: LoadBalancer
+  type: NodePort
   selector:
     istio: ingress
   ports:
@@ -17,7 +16,6 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: istio-ingressgateway
-  namespace: istio-ingress
 spec:
   selector:
     matchLabels:
@@ -54,7 +52,6 @@ apiVersion: rbac.authorization.k8s.io/v1
 kind: Role
 metadata:
   name: istio-ingressgateway-sds
-  namespace: istio-ingress
 rules:
 - apiGroups: [""]
   resources: ["secrets"]
@@ -64,7 +61,6 @@ apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
 metadata:
   name: istio-ingressgateway-sds
-  namespace: istio-ingress
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: Role
