--- a/k8s-deployment/bookinfo/networking/virtualservice.yaml
+++ b/k8s-deployment/bookinfo/networking/virtualservice.yaml
@@ -1,10 +1,11 @@
+
 apiVersion: networking.istio.io/v1alpha3
 kind: VirtualService
 metadata:
-  name: productpage-virtualservice
+  name: bookinfo
 spec:
   hosts:
-  - "bookinfo.app"
+  - "*"
   gateways:
   - bookinfo-gateway
   http:
@@ -14,11 +15,14 @@ spec:
     - uri:
         prefix: /static
     - uri:
+        exact: /login
+    - uri:
         exact: /logout
     - uri:
         prefix: /api/v1/products
     route:
     - destination:
+        # productpage
         host: productpage
         port:
           number: 9080
