--- a/k8s-deployment/RBAC/editor-role-bindinding.yaml
+++ b/k8s-deployment/RBAC/editor-role-bindinding.yaml
@@ -2,11 +2,10 @@ apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
 metadata:
   name: editor-binding
-  namespace: default
 subjects:
 - kind: ServiceAccount
   name: editor
-  namespace: default
+  namespace: tst
 roleRef:
   kind: Role
   name: editor
