--- a/k8s-deployment/RBAC/viewer-role-binding.yaml
+++ b/k8s-deployment/RBAC/viewer-role-binding.yaml
@@ -2,11 +2,10 @@ apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
 metadata:
   name: viewer-binding
-  namespace: default
 subjects:
 - kind: ServiceAccount
   name: viewer
-  namespace: default
+  namespace: tst
 roleRef:
   kind: Role
   name: viewer
