--- a/jenkins/setup_Jenkins_on_Minikube/jenkins-service.yaml
+++ b/jenkins/setup_Jenkins_on_Minikube/jenkins-service.yaml
@@ -1,11 +1,12 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: jenkins
+  name: jenkins-service
 spec:
+  selector:
+    app: jenkins-server
   type: NodePort
   ports:
-  - port: 8081
-    targetPort: 8080
-  selector:
-    app: jenkins
+    - port: 8080
+      targetPort: 8080
+      nodePort: 32000
