--- a/k8s-deployment/podsample/pod1.yaml
+++ b/k8s-deployment/podsample/pod1.yaml
@@ -7,8 +7,7 @@ metadata:
     env: blue
 spec:
   containers:
-  - name: nginx
-    image: nginx:1.14.2
+  - name: sample
+    image: kishalaypage:v1
     ports:
     - containerPort: 8080
-
