--- a/k8s-deployment/troubleshooting/main/deployment.yaml
+++ b/k8s-deployment/troubleshooting/main/deployment.yaml
@@ -1,8 +1,8 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: scenario3
-  namespace: tm2
+  name: sample-deployment
+  namespace: wrk
 spec:
   replicas: 3
   selector:
@@ -18,19 +18,14 @@ spec:
         image: nginx:latest
         resources:
           requests:
-            cpu: "100m"
-            memory: "100Mi"
+            cpu: "500m"
+            memory: "750Mi"
           limits:
-            cpu: "250m"
-            memory: "250Mi"
+            cpu: "1Gi"
+            memory: "1Gi"
         volumeMounts:
           - name:  sit-volumeclaim
             mountPath: /data
-      tolerations:
-        - effect: NoSchedule
-          key: role
-          operator: Equal
-          value: schedule
       volumes:
         - name: sit-volumeclaim
           persistentVolumeClaim:
