--- a/k8s-deployment/troubleshooting/scenario-1/deployment.yaml
+++ b/k8s-deployment/troubleshooting/scenario-1/deployment.yaml
@@ -1,8 +1,8 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: sample-deployment
-  namespace: wrk
+  name: scenario1
+  namespace: tm2
 spec:
   replicas: 3
   selector:
@@ -18,15 +18,8 @@ spec:
         image: nginx:latest
         resources:
           requests:
-            cpu: "500m"
-            memory: "750Mi"
+            cpu: "100m"
+            memory: "100Mi"
           limits:
-            cpu: "1Gi"
-            memory: "1Gi"
-        volumeMounts:
-          - name:  sit-volumeclaim
-            mountPath: /data
-      volumes:
-        - name: sit-volumeclaim
-          persistentVolumeClaim:
-            claimName: sit-pvc 
+            cpu: "200m"
+            memory: "200Mi"
